# simple-microdot-example

./: README.md  pyproject.toml
simple_microdot_example/: index.py  md_utils.py
