[tool.poetry]
name = "simple-microdot-example"
version = "0.1.0"
description = ""
authors = ["mwmuni"]
packages = [{ include = "simple_microdot_example", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
microdot = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
